FrontEndII - CheckPointI - alterações - 11/03/2023

--- a/CheckPointI/index.html
+++ b/CheckPointI/index.html
@@ -20,7 +20,7 @@
             <h1>Criação de Personagem</h1>
             <div>
                 <div class="inputBox">
-                    <input type="text" name="titulo" id="titulo" class="inputText" required>
+                    <input type="text" name="titulo" id="titulo" class="inputText required" required>
                     <label for="titulo" class="labelInput">Título</label>
                 </div>
                 <span class="error titulo-error">
@@ -30,7 +30,7 @@
             </div>
             <div>
                 <div class="inputBox">
-                    <input type="text" name="url" id="url" class="inputText" required>
+                    <input type="text" name="url" id="url" class="inputText required" required>
                     <label for="url" class="labelInput">URL</label>
                 </div>
                 <span class="error url-error">
@@ -40,7 +40,7 @@
             </div>
             <div>
                 <div class="inputBox">
-                    <input type="text" name="desc" id="desc" class="inputText" required>
+                    <input type="text" name="desc" id="desc" class="inputText riquered" required>
                     <label for="desc" class="labelInput">Descrição</label>
                 </div>
                 <span class="error desc-error">
