FrontEndII - CheckPointI - alterações - 13/03/2023

--- a/CheckPointI/index.html
+++ b/CheckPointI/index.html
@@ -23,7 +23,7 @@
                     <input type="text" name="titulo" id="titulo" class="inputText required" required>
                     <label for="titulo" class="labelInput">Título</label>
                 </div>
-                <span class="error titulo-error">
+                <span name="errortxt" id="errortxt" class="error titulo-error">
                     <i class="bx bx-error-circle error-icon"></i>
                     <p class="error-text">Informe o título</p>
                 </span>
@@ -49,7 +49,7 @@
                 </span>
             </div>
             <div class="button">
-                <button class="button"> <a class="explorar" href="#">Cadastrar</a> </button>
+                <button type="submit" class="button"> <a class="explorar" href="#">Cadastrar</a> </button>
             </div>
         </form>
     </section>
@@ -59,7 +59,7 @@
 
         </div>
     </main>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 
 </html>
