FrontEndII - CheckPointII - alterações - 22/03/2023

--- a/DH-FrontEnd2-ToDoApp-ProjetoBase-main/signup.html
+++ b/DH-FrontEnd2-ToDoApp-ProjetoBase-main/signup.html
@@ -10,9 +10,9 @@
   <!-- ---------------- estilos compartilhados entre login e signup ---------------- -->
   <link rel="stylesheet" href="styles/acesso.css">
 
-  <!-- ---------------------- lógica aplicada no registro -------------------- -->
+  <!-- ---------------------- lógica aplicada no registro -------------------- 
   <script src="/scripts/utils.js"></script>
-  <script src="/scripts/signup.js"></script>
+  <script src="/scripts/signup.js"></script>-->
 
 </head>
 
@@ -29,7 +29,7 @@
 
       <div>
           <label for="inputNome">Nome:</label>
-          <input id="inputNome" type="text" required minlength="4" required maxlength="20"></input>
+          <input id="inputNome" type="text" required minlength="3" required maxlength="20"></input>
           <small>Informe o nome corretamente</small>
       </div>
 
