--- a/DH-FrontEnd2-ToDoApp-ProjetoBase-main/signup.html
+++ b/DH-FrontEnd2-ToDoApp-ProjetoBase-main/signup.html
@@ -68,7 +68,7 @@
     </div>
   </div>
 
-  <script src="/scripts/signup.js"></script>
+  <script src="./scripts/signup.js" type="module"></script>
 
 </body>
 
