--- a/DH-FrontEnd2-ToDoApp-ProjetoBase-main/tarefas.html
+++ b/DH-FrontEnd2-ToDoApp-ProjetoBase-main/tarefas.html
@@ -32,7 +32,7 @@
     </nav>
 
     <div class="user-info">
-      <p>Nome usuário</p>
+      <p id='user'>Nome usuário</p>
       <div class="user-image"></div>
       <p id="closeApp">Finalizar sessão</i>
       </p>
@@ -81,6 +81,8 @@
   <ul class="tarefas-terminadas">
 
   </ul>
+
+  <script src="./scripts/task.js" type="module"></script>
 
 </body>
 
