FrontEndII - CheckPointII - alterações - 31/03/2023

--- a/DH-FrontEnd2-ToDoApp-ProjetoBase-main/signup.html
+++ b/DH-FrontEnd2-ToDoApp-ProjetoBase-main/signup.html
@@ -53,7 +53,7 @@
       
       <div>
         <label for="inputPasswordConf">Repetir senha:</label>
-        <input id="inputPasswordConf" type="email" required minlength="8"></input>
+        <input id="inputPasswordConf" type="password" required minlength="8"></input>
         <small>Senha não confere</small>
       </div>      
 
