--- a/DH-FrontEnd2-ToDoApp-ProjetoBase-main/tarefas.html
+++ b/DH-FrontEnd2-ToDoApp-ProjetoBase-main/tarefas.html
@@ -50,8 +50,8 @@
 
 
   <ul class="tarefas-pendentes">
-    <div>
-    <!-- <div id="skeleton"> -->
+    <div id="task-pendentes">
+    <!-- <div id="skeleton"> 
       <li class="tarefa">
         <div class="not-done"></div>
         <div class="descricao">
@@ -72,7 +72,7 @@
           <p class="nome">Nova tarefa</p>
           <p class="timestamp">Criada em: 15/07/21</p>
         </div>
-      </li>
+      </li>-->
 
     </div>
   </ul>
