--- a/DH-FrontEnd2-ToDoApp-ProjetoBase-main/tarefas.html
+++ b/DH-FrontEnd2-ToDoApp-ProjetoBase-main/tarefas.html
@@ -80,6 +80,18 @@
   <h2 class="titulo-terminadas">Tarefas terminadas</h2>
   <ul class="tarefas-terminadas">
 
+    <div id="task-concluidas">
+
+      <li class="tarefa">
+        <div class="not-done"></div>
+        <div class="descricao">
+          <p class="nome">Nova tarefa</p>
+          <p class="timestamp">Criada em: 15/07/21</p>
+        </div>
+      </li>
+
+    </div>
+
   </ul>
 
   <script src="./scripts/task.js" type="module"></script>
