--- a/DH-FrontEnd2-ToDoApp-ProjetoBase-main/signup.html
+++ b/DH-FrontEnd2-ToDoApp-ProjetoBase-main/signup.html
@@ -14,6 +14,9 @@
   <script src="/scripts/utils.js"></script>
   <script src="/scripts/signup.js"></script>-->
 
+    <!-- Sweet alert-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </head>
 
 <body>
