--- a/DH-FrontEnd2-ToDoApp-ProjetoBase-main/index.html
+++ b/DH-FrontEnd2-ToDoApp-ProjetoBase-main/index.html
@@ -9,10 +9,14 @@
 
   <!-- ---------------- estilos compartilhados entre login e signup ---------------- -->
   <link rel="stylesheet" href="styles/acesso.css">
+  
 
   <!-- ---------------------- lógica aplicada no login ----------------------- -->
   <!--<script src="/scripts/utils.js"></script>
   <script src="/scripts/index.js"></script> -->
+
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
 
 </head>
 
