--- a/DH-FrontEnd2-ToDoApp-ProjetoBase-main/tarefas.html
+++ b/DH-FrontEnd2-ToDoApp-ProjetoBase-main/tarefas.html
@@ -21,6 +21,9 @@
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
+  <!-- Sweet alert-->
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
 
   <title>To-Do App</title>
 </head>
